--- a/po4a/po/ja_JP/faq.adoc.po
+++ b/po4a/po/ja_JP/faq.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-26 18:45+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2020-12-27 22:11+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/faq.adoc:1
@@ -31,6 +31,10 @@ msgid ""
 "permalink: /faq/\n"
 "---\n"
 msgstr ""
+"layout: faq\n"
+"title: FAQ\n"
+"permalink: /faq/\n"
+"---\n"
 
 #. type: Title ==
 #: upstream/faq.adoc:7
@@ -41,10 +45,11 @@ msgstr "ライセンスは何でしょうか？"
 #. type: Plain text
 #: upstream/faq.adoc:10
 msgid ""
-"Quarkus is an Open Source project licensed under the "
-"https://www.apache.org/licenses/LICENSE-2.0[Apache License version 2.0]."
+"Quarkus is an Open Source project licensed under the https://www.apache.org/licenses/LICENSE-2.0[Apache "
+"License version 2.0]."
 msgstr ""
-"Quarkusは https://www.apache.org/licenses/LICENSE-2.0[Apache License version 2.0] でライセンスされているオープンソースプロジェクトです。"
+"Quarkusは https://www.apache.org/licenses/LICENSE-2.0[Apache License version 2.0] でライセンスされているオー"
+"プンソースプロジェクトです。"
 
 #. type: Title ==
 #: upstream/faq.adoc:11
@@ -55,11 +60,13 @@ msgstr "どこから入手できますか？"
 #. type: Plain text
 #: upstream/faq.adoc:14
 msgid ""
-"Quarkus is published in Maven Central, check out link:/extensions[which "
-"extensions] you need and just import them in your `pom.xml` to get "
-"Quarkus. We recommend you start your Quarkus experience via our "
-"link:/get-started[Getting Started guides]."
+"Quarkus is published in Maven Central, check out link:/extensions[which extensions] you need and just "
+"import them in your `pom.xml` to get Quarkus. We recommend you start your Quarkus experience via our link:/"
+"get-started[Getting Started guides]."
 msgstr ""
+"QuarkusはMaven Centralで公開されています。必要な link:/extensions[which extensions] を確認し、`pom.xml` にイ"
+"ンポートするだけでQuarkusを入手できます。link:/get-started[Getting Started guides] からQuarkusの体験を始める"
+"ことをお勧めします。"
 
 #. type: Title ==
 #: upstream/faq.adoc:15
@@ -70,16 +77,18 @@ msgstr "Quarkusは安定していますか？"
 #. type: Plain text
 #: upstream/faq.adoc:18
 msgid ""
-"Yes, we consider Quarkus stable. Remember 95% of the features Quarkus apps "
-"use are provided by the ecosystem like Hibernate ORM, Eclipse Vert.x, Netty, "
-"RESTEasy, etc. These libraries are rock solid :)"
+"Yes, we consider Quarkus stable. Remember 95% of the features Quarkus apps use are provided by the "
+"ecosystem like Hibernate ORM, Eclipse Vert.x, Netty, RESTEasy, etc. These libraries are rock solid :)"
 msgstr ""
+"はい、Quarkusは安定していると考えています。Quarkusのアプリが使用する機能の95%は、Hibernate ORM、Eclipse "
+"Vert.x、Netty、RESTEasyなどのエコシステムによって提供されていることを忘れないでください。これらのライブラリ"
+"は極めて盤石です:)"
 
 #. type: Plain text
 #: upstream/faq.adoc:20
 msgid ""
-"You can go to https://code.quarkus.io/[code.quarkus.io] to see if a "
-"particular extension is _stable_ (default) or _preview_."
+"You can go to https://code.quarkus.io/[code.quarkus.io] to see if a particular extension is _stable_ "
+"(default) or _preview_."
 msgstr ""
 
 #. type: Title ==
@@ -90,20 +99,16 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/faq.adoc:24
-msgid ""
-"One of the main goals of Quarkus is ease of extensibility and to build a "
-"vibrant ecosystem."
+msgid "One of the main goals of Quarkus is ease of extensibility and to build a vibrant ecosystem."
 msgstr ""
 
 #. type: Plain text
 #: upstream/faq.adoc:26
 msgid ""
-"Think of Quarkus extensions as your project dependencies. Extensions "
-"configure, boot and integrate a framework or technology into your Quarkus "
-"application. They also do all of the heavy lifting of providing the right "
-"information to GraalVM for your application to compile natively. This will "
-"allow 3rd party projects to easily take advantage of the work we have done "
-"to make it easier to target GraalVM."
+"Think of Quarkus extensions as your project dependencies. Extensions configure, boot and integrate a "
+"framework or technology into your Quarkus application. They also do all of the heavy lifting of providing "
+"the right information to GraalVM for your application to compile natively. This will allow 3rd party "
+"projects to easily take advantage of the work we have done to make it easier to target GraalVM."
 msgstr ""
 
 #. type: Title ==
@@ -115,46 +120,33 @@ msgstr ""
 #. type: Plain text
 #: upstream/faq.adoc:30
 msgid ""
-"Extensions have a various degree of maturity when they enter the Quarkus "
-"ecosystem. A status offers the expectations you can rely on."
+"Extensions have a various degree of maturity when they enter the Quarkus ecosystem. A status offers the "
+"expectations you can rely on."
 msgstr ""
 
 #. type: Plain text
 #: upstream/faq.adoc:32
 #, no-wrap
-msgid ""
-"*Stable*: backward compatibility and presence in the ecosystem are taken "
-"very seriously. An application can safely rely on these "
-"extensions. Extensions not marked as preview or experimental (the majority) "
-"are stable.\n"
+msgid "*Stable*: backward compatibility and presence in the ecosystem are taken very seriously. An application can safely rely on these extensions. Extensions not marked as preview or experimental (the majority) are stable.\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/faq.adoc:34
 #, no-wrap
-msgid ""
-"*Preview*: backward compatibility and presence in the ecosystem is not "
-"guaranteed. Specific improvements might require to change configuration or "
-"APIs and plans to become _stable_ are under way. Such extensions are in the "
-"middle of their maturation process.\n"
+msgid "*Preview*: backward compatibility and presence in the ecosystem is not guaranteed. Specific improvements might require to change configuration or APIs and plans to become _stable_ are under way. Such extensions are in the middle of their maturation process.\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/faq.adoc:36
 #, no-wrap
-msgid ""
-"*Experimental*: early feedback is requested to mature the idea. There is no "
-"guarantee of stability nor long term presence in the platform until the "
-"solution matures. Such extensions are at the beginning of their maturation "
-"process.\n"
+msgid "*Experimental*: early feedback is requested to mature the idea. There is no guarantee of stability nor long term presence in the platform until the solution matures. Such extensions are at the beginning of their maturation process.\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/faq.adoc:38
 msgid ""
-"You can find the extension status on "
-"https://code.quarkus.io[code.quarkus.io] or in the extension "
-"link:/guides/[guides]."
+"You can find the extension status on https://code.quarkus.io[code.quarkus.io] or in the extension link:/"
+"guides/[guides]."
 msgstr ""
 
 #. type: Title ==
@@ -171,34 +163,28 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/faq.adoc:44
-msgid ""
-"Oh yeah! We had quite a few extensions written outside the Quarkus "
-"\"initial\" team."
+msgid "Oh yeah! We had quite a few extensions written outside the Quarkus \"initial\" team."
 msgstr ""
 
 #. type: Plain text
 #: upstream/faq.adoc:46
 msgid ""
-"Quarkus is an open ecosystem and we hope to see all the extensions people "
-"need to write their apps. We are working as we speak to allow an extension "
-"to be published in separate repos and separate GAVs and thus published in "
-"Maven repos independently of Quarkus core. This will greatly simplify the "
-"publication process. Expect news soon."
+"Quarkus is an open ecosystem and we hope to see all the extensions people need to write their apps. We are "
+"working as we speak to allow an extension to be published in separate repos and separate GAVs and thus "
+"published in Maven repos independently of Quarkus core. This will greatly simplify the publication process. "
+"Expect news soon."
 msgstr ""
 
 #. type: Plain text
 #: upstream/faq.adoc:48
 msgid ""
-"The one current restriction is that extensions should work in both OpenJDK "
-"and GraalVM native executables. That is the guarantee we give Quarkus users "
-"(a cross compilation for their app). We have a maturity model to improve an "
-"extension to be fully \"Quarked\" and benefit from Quarkus, all done in "
-"incremental steps. Just hop on our "
-"https://quarkus.io/community/#discussions[mailing list] to discuss your "
-"ideas and get help. And you can start reading our "
-"https://quarkus.io/guides/writing-extensions[Writing extensions guide] as "
-"well or more simply get inspiration from the "
-"https://github.com/quarkusio/quarkus/tree/master/extensions[existing ones]."
+"The one current restriction is that extensions should work in both OpenJDK and GraalVM native executables. "
+"That is the guarantee we give Quarkus users (a cross compilation for their app). We have a maturity model "
+"to improve an extension to be fully \"Quarked\" and benefit from Quarkus, all done in incremental steps. "
+"Just hop on our https://quarkus.io/community/#discussions[mailing list] to discuss your ideas and get help. "
+"And you can start reading our https://quarkus.io/guides/writing-extensions[Writing extensions guide] as "
+"well or more simply get inspiration from the https://github.com/quarkusio/quarkus/tree/master/"
+"extensions[existing ones]."
 msgstr ""
 
 #. type: Plain text
@@ -209,25 +195,21 @@ msgstr ""
 #. type: Plain text
 #: upstream/faq.adoc:53
 msgid ""
-"https://www.graalvm.org[GraalVM] is a universal virtual machine for running "
-"applications written in various different languages, as well as providing "
-"the ability to compile JVM bytecode to a native executable (this native "
-"executable runs a special virtual machine called SubstrateVM). These native "
-"executables start much faster and can use a lot less memory than a "
-"traditional JVM, however not every JVM feature is supported, and some are "
-"more limited than normal."
+"https://www.graalvm.org[GraalVM] is a universal virtual machine for running applications written in various "
+"different languages, as well as providing the ability to compile JVM bytecode to a native executable (this "
+"native executable runs a special virtual machine called SubstrateVM). These native executables start much "
+"faster and can use a lot less memory than a traditional JVM, however not every JVM feature is supported, "
+"and some are more limited than normal."
 msgstr ""
 
 #. type: Plain text
 #: upstream/faq.adoc:55
 msgid ""
-"For example by default reflection in GraalVM will not work, unless a "
-"class/member has been explicitly registered for reflection. This is normally "
-"achieved by listing every class, method, field and constructor in a JSON "
-"file, and passing this as a parameter into the native image build. This "
-"obviously gets quite cumbersome for all but the most trivial "
-"projects. Quarkus provides a framework that makes it easy to work around "
-"these annotations, and programmatically determine what should be registered."
+"For example by default reflection in GraalVM will not work, unless a class/member has been explicitly "
+"registered for reflection. This is normally achieved by listing every class, method, field and constructor "
+"in a JSON file, and passing this as a parameter into the native image build. This obviously gets quite "
+"cumbersome for all but the most trivial projects. Quarkus provides a framework that makes it easy to work "
+"around these annotations, and programmatically determine what should be registered."
 msgstr ""
 
 #. type: Plain text
