--- a/po4a/po/ja_JP/faq.adoc.po
+++ b/po4a/po/ja_JP/faq.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-26 18:45+0900\n"
-"PO-Revision-Date: 2020-12-27 22:11+0900\n"
+"PO-Revision-Date: 2020-12-27 23:01+0900\n"
 "Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/faq.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/faq.adoc:5
@@ -40,16 +40,12 @@ msgstr ""
 #: upstream/faq.adoc:7
 #, no-wrap
 msgid "What is your license?"
-msgstr "ライセンスは何でしょうか？"
+msgstr "ライセンスは何ですか？"
 
 #. type: Plain text
 #: upstream/faq.adoc:10
-msgid ""
-"Quarkus is an Open Source project licensed under the https://www.apache.org/licenses/LICENSE-2.0[Apache "
-"License version 2.0]."
-msgstr ""
-"Quarkusは https://www.apache.org/licenses/LICENSE-2.0[Apache License version 2.0] でライセンスされているオー"
-"プンソースプロジェクトです。"
+msgid "Quarkus is an Open Source project licensed under the https://www.apache.org/licenses/LICENSE-2.0[Apache License version 2.0]."
+msgstr "Quarkusは https://www.apache.org/licenses/LICENSE-2.0[Apache License version 2.0] でライセンスされているオープンソースプロジェクトです。"
 
 #. type: Title ==
 #: upstream/faq.adoc:11
@@ -59,14 +55,8 @@ msgstr "どこから入手できますか？"
 
 #. type: Plain text
 #: upstream/faq.adoc:14
-msgid ""
-"Quarkus is published in Maven Central, check out link:/extensions[which extensions] you need and just "
-"import them in your `pom.xml` to get Quarkus. We recommend you start your Quarkus experience via our link:/"
-"get-started[Getting Started guides]."
-msgstr ""
-"QuarkusはMaven Centralで公開されています。必要な link:/extensions[which extensions] を確認し、`pom.xml` にイ"
-"ンポートするだけでQuarkusを入手できます。link:/get-started[Getting Started guides] からQuarkusの体験を始める"
-"ことをお勧めします。"
+msgid "Quarkus is published in Maven Central, check out link:/extensions[which extensions] you need and just import them in your `pom.xml` to get Quarkus. We recommend you start your Quarkus experience via our link:/get-started[Getting Started guides]."
+msgstr "QuarkusはMaven Centralで公開されています。必要な link:/extensions[which extensions] を確認し、`pom.xml` にインポートするだけでQuarkusを入手できます。link:/get-started[Getting Started guides] からQuarkusの体験を始めることをお勧めします。"
 
 #. type: Title ==
 #: upstream/faq.adoc:15
@@ -76,178 +66,154 @@ msgstr "Quarkusは安定していますか？"
 
 #. type: Plain text
 #: upstream/faq.adoc:18
-msgid ""
-"Yes, we consider Quarkus stable. Remember 95% of the features Quarkus apps use are provided by the "
-"ecosystem like Hibernate ORM, Eclipse Vert.x, Netty, RESTEasy, etc. These libraries are rock solid :)"
-msgstr ""
-"はい、Quarkusは安定していると考えています。Quarkusのアプリが使用する機能の95%は、Hibernate ORM、Eclipse "
-"Vert.x、Netty、RESTEasyなどのエコシステムによって提供されていることを忘れないでください。これらのライブラリ"
-"は極めて盤石です:)"
+msgid "Yes, we consider Quarkus stable. Remember 95% of the features Quarkus apps use are provided by the ecosystem like Hibernate ORM, Eclipse Vert.x, Netty, RESTEasy, etc. These libraries are rock solid :)"
+msgstr "はい、Quarkusは安定していると考えています。Quarkusのアプリが使用する機能の95%は、Hibernate ORM、Eclipse Vert.x、Netty、RESTEasyなどのエコシステムによって提供されていることを忘れないでください。これらのライブラリは極めて盤石です:)"
 
 #. type: Plain text
 #: upstream/faq.adoc:20
-msgid ""
-"You can go to https://code.quarkus.io/[code.quarkus.io] to see if a particular extension is _stable_ "
-"(default) or _preview_."
-msgstr ""
+msgid "You can go to https://code.quarkus.io/[code.quarkus.io] to see if a particular extension is _stable_ (default) or _preview_."
+msgstr "https://code.quarkus.io/[code.quarkus.io]にアクセスして、特定の拡張子が_安定_（デフォルト）か_プレビュー_かを確認できます。"
 
 #. type: Title ==
 #: upstream/faq.adoc:21
 #, no-wrap
 msgid "What is a Quarkus extension?"
-msgstr ""
+msgstr "Quarkusエクステンションとは何ですか？"
 
 #. type: Plain text
 #: upstream/faq.adoc:24
 msgid "One of the main goals of Quarkus is ease of extensibility and to build a vibrant ecosystem."
-msgstr ""
+msgstr "Quarkusの主な目標の1つは、拡張性の容易さと活気のあるエコシステムの構築です。"
 
 #. type: Plain text
 #: upstream/faq.adoc:26
-msgid ""
-"Think of Quarkus extensions as your project dependencies. Extensions configure, boot and integrate a "
-"framework or technology into your Quarkus application. They also do all of the heavy lifting of providing "
-"the right information to GraalVM for your application to compile natively. This will allow 3rd party "
-"projects to easily take advantage of the work we have done to make it easier to target GraalVM."
-msgstr ""
+msgid "Think of Quarkus extensions as your project dependencies. Extensions configure, boot and integrate a framework or technology into your Quarkus application. They also do all of the heavy lifting of providing the right information to GraalVM for your application to compile natively. This will allow 3rd party projects to easily take advantage of the work we have done to make it easier to target GraalVM."
+msgstr "Quarkusエクステンションはプロジェクトの依存関係だと考えてください。エクステンションは、フレームワークまたはテクノロジーをQuarkusアプリケーションに構成、起動、および統合します。また、アプリケーションをネイティブにコンパイルするために、GraalVMに適切な情報を提供するという面倒な作業もすべて行います。これにより、サードパーティのプロジェクトは、GraalVMをターゲットにしやすくするために我々が行った作業を簡単に利用できるようになります。"
 
 #. type: Title ==
 #: upstream/faq.adoc:27
 #, no-wrap
 msgid "What are the extension statuses?"
-msgstr ""
+msgstr "エクステンションステータスとは何ですか？"
 
 #. type: Plain text
 #: upstream/faq.adoc:30
-msgid ""
-"Extensions have a various degree of maturity when they enter the Quarkus ecosystem. A status offers the "
-"expectations you can rely on."
-msgstr ""
+msgid "Extensions have a various degree of maturity when they enter the Quarkus ecosystem. A status offers the expectations you can rely on."
+msgstr "エクステンションは、Quarkusエコシステムに入る際に、さまざまな成熟度を持ちます。ステータスは、信頼度の期待値を提供します。"
 
 #. type: Plain text
 #: upstream/faq.adoc:32
 #, no-wrap
 msgid "*Stable*: backward compatibility and presence in the ecosystem are taken very seriously. An application can safely rely on these extensions. Extensions not marked as preview or experimental (the majority) are stable.\n"
-msgstr ""
+msgstr "*安定*：下位互換性とエコシステムでの存在感が非常に重要視されています。アプリケーションはこれらのエクステンションに安全に依存できます。プレビューまたは実験的（大部分）としてマークされていないエクステンションは安定しています。\n"
 
 #. type: Plain text
 #: upstream/faq.adoc:34
 #, no-wrap
 msgid "*Preview*: backward compatibility and presence in the ecosystem is not guaranteed. Specific improvements might require to change configuration or APIs and plans to become _stable_ are under way. Such extensions are in the middle of their maturation process.\n"
-msgstr ""
+msgstr "*プレビュー*：下位互換性とエコシステム内での存在感は保証されません。特定の改善には、構成またはAPIの変更が必要になる場合があり、_安定_になる計画が進行中です。このようなエクステンションは、成熟プロセスの途中です。\n"
 
 #. type: Plain text
 #: upstream/faq.adoc:36
 #, no-wrap
 msgid "*Experimental*: early feedback is requested to mature the idea. There is no guarantee of stability nor long term presence in the platform until the solution matures. Such extensions are at the beginning of their maturation process.\n"
-msgstr ""
+msgstr "*実験的*：アイデアを成熟させるために、早期のフィードバックが必要です。ソリューションが成熟するまで、プラットフォーム内での安定性や長期的な存在は保証されません。このようなエクステンションは、成熟プロセスの初期段階にあります。\n"
 
 #. type: Plain text
 #: upstream/faq.adoc:38
-msgid ""
-"You can find the extension status on https://code.quarkus.io[code.quarkus.io] or in the extension link:/"
-"guides/[guides]."
-msgstr ""
+msgid "You can find the extension status on https://code.quarkus.io[code.quarkus.io] or in the extension link:/guides/[guides]."
+msgstr "エクステンションステータスは、https：//code.quarkus.io[code.quarkus.io] またはエクステンション link:/guides/[guides] で確認できます。"
 
 #. type: Title ==
 #: upstream/faq.adoc:39
 #, no-wrap
 msgid "Can I write an extension?"
-msgstr ""
+msgstr "エクステンションを作成できますか？"
 
 #. type: Title ==
 #: upstream/faq.adoc:41
 #, no-wrap
 msgid "Will the Quarkus team accept my extension?"
-msgstr ""
+msgstr "Quarkusチームは私のエクステンションを受け入れますか？"
 
 #. type: Plain text
 #: upstream/faq.adoc:44
 msgid "Oh yeah! We had quite a few extensions written outside the Quarkus \"initial\" team."
-msgstr ""
+msgstr "勿論です！ Quarkusの「初期」チームの外部でかなりの数のエクステンションが作成されました。"
 
 #. type: Plain text
 #: upstream/faq.adoc:46
-msgid ""
-"Quarkus is an open ecosystem and we hope to see all the extensions people need to write their apps. We are "
-"working as we speak to allow an extension to be published in separate repos and separate GAVs and thus "
-"published in Maven repos independently of Quarkus core. This will greatly simplify the publication process. "
-"Expect news soon."
-msgstr ""
+msgid "Quarkus is an open ecosystem and we hope to see all the extensions people need to write their apps. We are working as we speak to allow an extension to be published in separate repos and separate GAVs and thus published in Maven repos independently of Quarkus core. This will greatly simplify the publication process. Expect news soon."
+msgstr "Quarkusはオープンエコシステムであり、人々がアプリを作成するために必要なすべてのエクステンションが存在することを期待しています。エクステンションを個別のリポジトリと個別のGAVで公開し、Quarkusコアとは独立してMavenリポジトリで公開できるようにするために取り組んでいます。これにより、公開プロセスが大幅に簡素化されます。近いうちのニュースを期待してください。"
 
 #. type: Plain text
 #: upstream/faq.adoc:48
 msgid ""
-"The one current restriction is that extensions should work in both OpenJDK and GraalVM native executables. "
-"That is the guarantee we give Quarkus users (a cross compilation for their app). We have a maturity model "
-"to improve an extension to be fully \"Quarked\" and benefit from Quarkus, all done in incremental steps. "
-"Just hop on our https://quarkus.io/community/#discussions[mailing list] to discuss your ideas and get help. "
-"And you can start reading our https://quarkus.io/guides/writing-extensions[Writing extensions guide] as "
-"well or more simply get inspiration from the https://github.com/quarkusio/quarkus/tree/master/"
-"extensions[existing ones]."
+"The one current restriction is that extensions should work in both OpenJDK and GraalVM native executables. That is the guarantee we give Quarkus users (a cross compilation for their app). We have a maturity model to improve an extension to be fully \"Quarked\" and benefit from Quarkus, all done in incremental steps. Just hop on our https://quarkus.io/community/#discussions[mailing list] to discuss your ideas and get help. And you "
+"can start reading our https://quarkus.io/guides/writing-extensions[Writing extensions guide] as well or more simply get inspiration from the https://github.com/quarkusio/quarkus/tree/master/extensions[existing ones]."
 msgstr ""
+"現在の制限の1つは、エクステンションはOpenJDKとGraalVMの両方のネイティブ実行可能ファイルで機能する必要があるということです。これは、Quarkusユーザーに提供する保証です（アプリのクロスコンパイル）。拡張機能を改善して完全に「Quarked」し、Quarkusの恩恵を受けるための成熟度モデルがあり、すべて段階的に実行されます。 https://quarkus.io/community/#discussions[メーリングリスト] にアクセスして、アイデアについて話し合い、サポートを受けてください。"
+"また、https://quarkus.io/guides/writing-extensions[エクステンションガイドの作成] を読み始めることも、 https://github.com/quarkusio/quarkus/tree/master/extensions[既存のエクステンション] からインスピレーションを得ることもできます。。"
 
 #. type: Plain text
 #: upstream/faq.adoc:51
 msgid "## What is GraalVM?"
-msgstr ""
+msgstr "## GraalVMとは何ですか？"
 
 #. type: Plain text
 #: upstream/faq.adoc:53
 msgid ""
-"https://www.graalvm.org[GraalVM] is a universal virtual machine for running applications written in various "
-"different languages, as well as providing the ability to compile JVM bytecode to a native executable (this "
-"native executable runs a special virtual machine called SubstrateVM). These native executables start much "
-"faster and can use a lot less memory than a traditional JVM, however not every JVM feature is supported, "
-"and some are more limited than normal."
+"https://www.graalvm.org[GraalVM] is a universal virtual machine for running applications written in various different languages, as well as providing the ability to compile JVM bytecode to a native executable (this native executable runs a special virtual machine called SubstrateVM). These native executables start much faster and can use a lot less memory than a traditional JVM, however not every JVM feature is supported, and some "
+"are more limited than normal."
 msgstr ""
+"https://www.graalvm.org[GraalVM] は、さまざまな異なる言語で記述されたアプリケーションを実行するためのユニバーサル仮想マシンであり、JVMバイトコードをネイティブ実行可能ファイルにコンパイルする機能を提供します（このネイティブ実行可能ファイルは、SubstrateVMと呼ばれる特別な仮想マシンを実行します）。これらのネイティブ実行可能ファイルは、従来のJVMよりもはるかに高速に起動し、使用するメモリを大幅に削減できますが、すべてのJVM機能がサポートさ"
+"れているわけではなく、一部は通常よりも制限されています。"
 
 #. type: Plain text
 #: upstream/faq.adoc:55
 msgid ""
-"For example by default reflection in GraalVM will not work, unless a class/member has been explicitly "
-"registered for reflection. This is normally achieved by listing every class, method, field and constructor "
-"in a JSON file, and passing this as a parameter into the native image build. This obviously gets quite "
-"cumbersome for all but the most trivial projects. Quarkus provides a framework that makes it easy to work "
-"around these annotations, and programmatically determine what should be registered."
+"For example by default reflection in GraalVM will not work, unless a class/member has been explicitly registered for reflection. This is normally achieved by listing every class, method, field and constructor in a JSON file, and passing this as a parameter into the native image build. This obviously gets quite cumbersome for all but the most trivial projects. Quarkus provides a framework that makes it easy to work around these "
+"annotations, and programmatically determine what should be registered."
 msgstr ""
+"たとえば、デフォルトでは、クラス/メンバーがリフレクション用に明示的に登録されていない限り、GraalVMでのリフレクションは機能しません。これは通常、すべてのクラス、メソッド、フィールド、コンストラクターをJSONファイルにリストし、これをパラメーターとしてネイティブイメージビルドに渡すことで実現されます。これは、最も些細なプロジェクトを除いて、明らかに非常に面倒になります。 Quarkusは、これらの注釈を簡単に回避し、何を登録するかをプログラムで"
+"決定できるフレームワークを提供します。"
 
 #. type: Plain text
 #: upstream/faq.adoc:57
 msgid "## How do you unify imperative and reactive programming?"
-msgstr ""
+msgstr "## 命令型プログラミングとリアクティブプログラミングをどのように統合しますか？"
 
 #. type: Plain text
 #: upstream/faq.adoc:59
 msgid "link:/vision/continuum[Learn more]."
-msgstr ""
+msgstr "link:/vision/continuum[Learn more]."
 
 #. type: Plain text
 #: upstream/faq.adoc:61
 msgid "## What does Container First mean?"
-msgstr ""
+msgstr "## コンテナ・ファーストはどういう意味ですか？"
 
 #. type: Plain text
 #: upstream/faq.adoc:63
 msgid "link:/vision/container-first[Learn more]."
-msgstr ""
+msgstr "link:/vision/container-first[Learn more]."
 
 #. type: Plain text
 #: upstream/faq.adoc:65
 msgid "## What is your view on standards?"
-msgstr ""
+msgstr "## 標準についてどう考えていますか？"
 
 #. type: Plain text
 #: upstream/faq.adoc:67
 msgid "link:/vision/standards[Learn more]."
-msgstr ""
+msgstr "link:/vision/standards[Learn more]."
 
 #. type: Plain text
 #: upstream/faq.adoc:69
 msgid "## What are you doing to improve developer joy?"
-msgstr ""
+msgstr "## 開発者の満足度を向上させるために何に取り組んでいますか？"
 
 #. type: Plain text
 #: upstream/faq.adoc:70
 msgid "link:/vision/developer-joy[Learn more]."
-msgstr ""
+msgstr "link:/vision/developer-joy[Learn more]."
