--- a/po4a/po/ja_JP/404.md.po
+++ b/po4a/po/ja_JP/404.md.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 08:41+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2020-12-29 09:43+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/404.md:4
@@ -23,23 +23,26 @@ msgid ""
 "layout: error-page\n"
 "permalink: /404.html\n"
 msgstr ""
+"layout: error-page\n"
+"permalink: /404.html\n"
 
 #. type: Title #
 #: upstream/404.md:6
 #, no-wrap
 msgid "Error 404"
-msgstr ""
+msgstr "Error 404"
 
 #. type: Title ##
 #: upstream/404.md:8
 #, no-wrap
-msgid ""
-"You have found nowhere.<br/>The pathway to normal space<br/>is found in the "
-"nav."
+msgid "You have found nowhere.<br/>The pathway to normal space<br/>is found in the nav."
 msgstr ""
+"どこでもないスペースを見つけました。<br/>\n"
+"通常のスペースへのパスは、<br/>\n"
+"ナビゲーションメニューに存在します。"
 
 #. type: Plain text
 #: upstream/404.md:10
 #, no-wrap
 msgid "A haiku for you.\n"
-msgstr ""
+msgstr "ポエム\n"
