--- a/po4a/po/ja_JP/CONTRIBUTING.md.po
+++ b/po4a/po/ja_JP/CONTRIBUTING.md.po
@@ -3,38 +3,37 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 08:42+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2020-12-29 10:20+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Title #
 #: upstream/CONTRIBUTING.md:1
 #, no-wrap
 msgid "Contributing to the Quarkus.io website"
-msgstr ""
+msgstr "Contributing to the Quarkus.io website"
 
 #. type: Plain text
 #: upstream/CONTRIBUTING.md:4
 #, no-wrap
-msgid ""
-"Contributions are welcome, please submit pull requests for the `develop` "
-"branch.\n"
-msgstr ""
+msgid "Contributions are welcome, please submit pull requests for the `develop` branch.\n"
+msgstr "Contributions are welcome, please submit pull requests for the `develop` branch.\n"
 
 #. type: Plain text
 #: upstream/CONTRIBUTING.md:6
 #, no-wrap
 msgid ""
-"**Important:** the guides are maintained in the main Quarkus repository and "
-"pull requests should be submitted there:\n"
+"**Important:** the guides are maintained in the main Quarkus repository and pull requests should be submitted there:\n"
 "https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc.\n"
 msgstr ""
+"**Important:** the guides are maintained in the main Quarkus repository and pull requests should be submitted there:\n"
+"https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc.\n"
