--- a/po4a/po/ja_JP/about.md.po
+++ b/po4a/po/ja_JP/about.md.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 08:42+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2020-12-29 09:44+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/about.md:5
@@ -24,15 +24,15 @@ msgid ""
 "title: About\n"
 "permalink: /about/\n"
 msgstr ""
+"layout: page\n"
+"title: About\n"
+"permalink: /about/\n"
 
 #. type: Plain text
 #: upstream/about.md:8
 #, no-wrap
-msgid ""
-"This is the base Jekyll theme. You can find out more info about customizing "
-"your Jekyll theme, as well as basic Jekyll usage documentation at "
-"[jekyllrb.com](https://jekyllrb.com/)\n"
-msgstr ""
+msgid "This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](https://jekyllrb.com/)\n"
+msgstr "This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](https://jekyllrb.com/)\n"
 
 #. type: Plain text
 #: upstream/about.md:12
@@ -42,6 +42,9 @@ msgid ""
 "[jekyll][jekyll-organization] /\n"
 "[minima](https://github.com/jekyll/minima)\n"
 msgstr ""
+"You can find the source code for Minima at GitHub:\n"
+"[jekyll][jekyll-organization] /\n"
+"[minima](https://github.com/jekyll/minima)\n"
 
 #. type: Plain text
 #: upstream/about.md:16
@@ -51,9 +54,12 @@ msgid ""
 "[jekyll][jekyll-organization] /\n"
 "[jekyll](https://github.com/jekyll/jekyll)\n"
 msgstr ""
+"You can find the source code for Jekyll at GitHub:\n"
+"[jekyll][jekyll-organization] /\n"
+"[jekyll](https://github.com/jekyll/jekyll)\n"
 
 #. type: Plain text
 #: upstream/about.md:18
 #, no-wrap
 msgid "[jekyll-organization]: https://github.com/jekyll\n"
-msgstr ""
+msgstr "[jekyll-organization]: https://github.com/jekyll\n"
