--- a/po4a/po/ja_JP/books.md.po
+++ b/po4a/po/ja_JP/books.md.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 08:41+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2020-12-29 10:19+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/books.md:6
@@ -23,7 +23,9 @@ msgid ""
 "layout: books\n"
 "title: Quarkus - Books\n"
 "permalink: /books/\n"
-"subtitle: \"Browse through these selections of new Quarkus related books and "
-"resources to expand your knowledge and hone your coding skills to step up "
-"your Quarkus game.\"\n"
+"subtitle: \"Browse through these selections of new Quarkus related books and resources to expand your knowledge and hone your coding skills to step up your Quarkus game.\"\n"
 msgstr ""
+"layout: books\n"
+"title: Quarkus - Books\n"
+"permalink: /books/\n"
+"subtitle: \"Browse through these selections of new Quarkus related books and resources to expand your knowledge and hone your coding skills to step up your Quarkus game.\"\n"
