--- a/i18n/po/ja_JP/community.md.po
+++ b/i18n/po/ja_JP/community.md.po
@@ -25,5 +25,5 @@ msgid ""
 "permalink: /community/\n"
 msgstr ""
 "layout: community\n"
-"title: Community\n"
+"title: コミュニティ\n"
 "permalink: /community/\n"
