--- a/i18n/po/ja_JP/get-started.md.po
+++ b/i18n/po/ja_JP/get-started.md.po
@@ -25,7 +25,7 @@ msgid ""
 "permalink: /get-started/\n"
 msgstr ""
 "layout: get-started\n"
-"title: Quarkus - Get Started\n"
+"title: Quarkus - 入門\n"
 "permalink: /get-started/\n"
 
 #. type: Plain text
