--- a/i18n/po/ja_JP/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc.po
@@ -3,24 +3,24 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:09+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2020-12-31 11:50+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:8
@@ -30,11 +30,17 @@ msgid ""
 "title: 'Quarkus 1.10.3.Final released - Bugfixes'\n"
 "date: 2020-12-08\n"
 "tags: release\n"
-"synopsis: 1.10.3.Final fixes issues and comes with documentation "
-"improvements.\n"
+"synopsis: 1.10.3.Final fixes issues and comes with documentation improvements.\n"
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 1.10.3.Final がリリースされました - バグフィックス'\n"
+"date: 2020-12-08\n"
+"tags: release\n"
+"synopsis: 1.10.3.Final には修正とドキュメントの改善が含まれます\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:11
@@ -42,6 +48,8 @@ msgid ""
 "1.10.3.Final is a maintenance release fixing bugs and improving the "
 "documentation."
 msgstr ""
+"1.10.3.Finalは、バグの修正とドキュメントの改善を行うメンテナンスリリースで"
+"す。"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:14
@@ -49,51 +57,57 @@ msgid ""
 "Thanks to all the contributors who reported issues and provided reproducers: "
 "it really helped a lot!"
 msgstr ""
+"問題を報告し、再現手順を提供してくれたすべてのコントリビューターに感謝しま"
+"す。非常に助かりました！"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:16
 msgid "It is a safe upgrade for everyone using Quarkus 1.10."
-msgstr ""
+msgstr "Quarkus 1.10を使用している人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:18
 msgid ""
-"If you are not using 1.10 already, please refer to the "
-"https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.10[1.10 "
-"migration guide]."
+"If you are not using 1.10 already, please refer to the https://github.com/"
+"quarkusio/quarkus/wiki/Migration-Guide-1.10[1.10 migration guide]."
 msgstr ""
+"まだ1.10を利用していない場合、https://github.com/quarkusio/quarkus/wiki/"
+"Migration-Guide-1.10[1.10移行ガイド]をご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:19
 #, no-wrap
 msgid "What's new?"
-msgstr ""
+msgstr "変更点"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:22
 msgid "This release is a maintenance release."
-msgstr ""
+msgstr "このリリースはメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:24
 msgid ""
-"You can get "
-"https://github.com/quarkusio/quarkus/releases/tag/1.10.3.Final[the full "
-"changelog of 1.10.3.Final on GitHub]."
+"You can get https://github.com/quarkusio/quarkus/releases/tag/1.10.3."
+"Final[the full changelog of 1.10.3.Final on GitHub]."
 msgstr ""
+"https://github.com/quarkusio/quarkus/releases/tag/1.10.3.Final[GitHub上の"
+"1.10.3.Finalの完全な変更履歴]を入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:25
 #, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:28
 msgid ""
-"We value your feedback a lot so please report bugs, ask for "
-"improvements... Let's build something great together!"
+"We value your feedback a lot so please report bugs, ask for improvements... "
+"Let's build something great together!"
 msgstr ""
+"私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非"
+"お願いします。一緒に素晴らしいものを作り上げていきましょう！"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:30
@@ -101,16 +115,22 @@ msgid ""
 "If you are a Quarkus user or just curious, don't be shy and join our "
 "welcoming community:"
 msgstr ""
+"Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらず"
+"にコミュニティに参加して下さい！："
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:32
-msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgid ""
+"provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:33
-msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
+msgid ""
+"craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
 msgstr ""
+"コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] "
+"を送信"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:34
@@ -118,10 +138,13 @@ msgid ""
 "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the "
 "https://groups.google.com/d/forum/quarkus-dev[mailing list];"
 msgstr ""
+"https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/"
+"quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-quarkus-1-10-3-final-released.adoc:35
 msgid ""
-"ask your questions on "
-"https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
+"ask your questions on https://stackoverflow.com/questions/tagged/"
+"quarkus[Stack Overflow]."
 msgstr ""
+"https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
