Add and Update translations

--- a/i18n/po/ja_JP/_posts/2020-12-08-resteasy-reactive.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-12-08-resteasy-reactive.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:09+0900\n"
-"PO-Revision-Date: 2020-12-31 12:31+0900\n"
+"PO-Revision-Date: 2020-12-31 13:06+0900\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -90,7 +90,7 @@ msgstr ""
 #: upstream/_posts/2020-12-08-resteasy-reactive.adoc:21
 #, no-wrap
 msgid "Why should I care?"
-msgstr "なぜ気にしなければならないのか？"
+msgstr "なぜ重要なのでしょうか？"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-08-resteasy-reactive.adoc:24
