--- a/i18n/po/ja_JP/support.md.po
+++ b/i18n/po/ja_JP/support.md.po
@@ -25,5 +25,5 @@ msgid ""
 "permalink: /support/\n"
 msgstr ""
 "layout: support\n"
-"title: 必要な時のサポート\n"
+"title: サポートが必要な場合\n"
 "permalink: /support/\n"
