--- a/i18n/po/ja_JP/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:09+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-01 16:32+0900\n"
+"Language: to\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:1
@@ -30,12 +30,17 @@ msgid ""
 "title: Extension codestarts - A new way to learn & discover Quarkus\n"
 "date: 2020-12-07\n"
 "tags: extensions codestarts quickstart\n"
-"synopsis: All our tooling has been updated and can now generate Quarkus "
-"application with example code (Extension Codestarts) showing the true power "
-"of the selected extensions...\n"
+"synopsis: All our tooling has been updated and can now generate Quarkus application with example code (Extension Codestarts) showing the true power of the selected extensions...\n"
 "author: adamevin\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: Extension codestarts - Quarkusを学習、探索する新しい方法\n"
+"date: 2020-12-07\n"
+"tags: extensions codestarts quickstart\n"
+"synopsis: すべてのツールが更新され、選択したエクステンションの真の力を示すサンプルコード（Extension Codestarts）が付属したQuarkusアプリケーションを生成できるようになりました\n"
+"author: adamevin\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:11
@@ -44,6 +49,10 @@ msgid ""
 "developers as well as experienced ones. This is because of the wide range "
 "(and growing) of Quarkus extensions, you simply can’t know them all."
 msgstr ""
+"Extension codestartsの良い点は、新しくQuarkusを開発したばかりの開発者だけでな"
+"く、経験豊富な開発者にも役立つ点です。これは、Quarkusのエクステンションの範囲"
+"が広い（そして増え続けている）ため、すべてを知っていることが単純に不可能だか"
+"らです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:13
@@ -51,13 +60,18 @@ msgid ""
 "When I am comparing frameworks, I think that Doc is a very important factor, "
 "but I am also often pretty lazy when it comes to reading it... don't you?"
 msgstr ""
+"フレームワークの比較をしていると、ドキュメントはとても重要な要素だと思うので"
+"すが、私もいざ読むとなるとかなり怠けてしまうとが多いです...あなたはどうです"
+"か？"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:15
 msgid ""
-"By the way you can see that Quarkus is pretty well "
-"https://quarkus.io/guides/[documented,role=external,window=_blank]."
+"By the way you can see that Quarkus is pretty well https://quarkus.io/guides/"
+"[documented,role=external,window=_blank]."
 msgstr ""
+"ちなみにQuarkusはかなり https://quarkus.io/guides/[ガイド, role=external, "
+"window=_blank]が充実しているのがわかるかと思います。"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:17
@@ -65,6 +79,8 @@ msgid ""
 "With this feature, we tried to take it a step further and transform that "
 "boring learning part to the thing we love most *CODING*.."
 msgstr ""
+"この機能では、さらに一歩進んで、退屈な学習の部分を、私たちが最も好きな *コー"
+"ディング* に変えようとしました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:19
@@ -73,6 +89,9 @@ msgid ""
 "the code showing you their true power, ready to run in your favorite IDE in "
 "a matter of seconds!"
 msgstr ""
+"今から、いくつかの新しいエクステンションを試してみたいときには、その真の力を"
+"示すコードが直接表示され、お気に入りのIDEであっという間に実行できるようになり"
+"ます!"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:21
@@ -80,6 +99,9 @@ msgid ""
 "All this, using your chosen build tool (Maven, Gradle or also Gradle with "
 "Kotlin DSL) and your chosen language (Java, Kotlin or Scala)."
 msgstr ""
+"これらはすべて、選択したビルドツール（Maven、Gradle、またはKotlin DSLによる"
+"Gradle）と選択した言語（Java、Kotlin、またはScala）を使用して行うことが出来ま"
+"す。"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:23
@@ -88,18 +110,20 @@ msgid ""
 "are now the official way of generating your Quarkus applications starting "
 "from 1.10!"
 msgstr ""
+"Codestartsは、（1.7から）ゆっくりと出来上がってきましたが、1.10からQuarkusア"
+"プリケーションを生成するための公式な方法になりました！"
 
 #. type: Target for macro image
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:24
 #, no-wrap
 msgid "/assets/images/posts/codestarts/cloud-native-quarkus-app.png"
-msgstr ""
+msgstr "/assets/images/posts/codestarts/cloud-native-quarkus-app.png"
 
 #. type: Title ==
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:26
 #, no-wrap
 msgid "Existing Extension codestarts"
-msgstr ""
+msgstr "既存のエクステンションのコードスタート"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:29
@@ -108,16 +132,19 @@ msgid ""
 "https://code.quarkus.io[code.quarkus.io,role=external,window=_blank] (with "
 "the jet fighter icon)."
 msgstr ""
+"私たちはすでに沢山のエクステンションの例を用意しており、 https://code."
+"quarkus.io[code.quarkus.io, role=external, window=_blank](ジェット戦闘機のア"
+"イコンが付いている)で見ることが出来ます。"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:31
 msgid "You can also find them on most of our Quarkus tooling:"
-msgstr ""
+msgstr "また、Quarkusのほとんどのツールでも見つけることが出来ます："
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:33
 msgid "The Quarkus Maven plugin:"
-msgstr ""
+msgstr "Quarkus Mavenプラグイン："
 
 #. type: delimited block -
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:37
@@ -129,9 +156,12 @@ msgstr ""
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:39
 msgid ""
 "The Quarkus CLI, it is still experimental, and we don't provide an installer "
-"yet. Still, you can easily try it using the amazing "
-"https://jbang.dev/[JBang,role=external,window=_blank]"
+"yet. Still, you can easily try it using the amazing https://jbang.dev/[JBang,"
+"role=external,window=_blank]"
 msgstr ""
+"Quarkus CLIは、まだ実験的なもので、インストーラーはまだ提供されていません。そ"
+"れでも、素晴らしい https://jbang.dev/[JBang, role=external, window=_blank]を"
+"使って簡単に試すことができます。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:43
@@ -142,41 +172,48 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:45
 msgid ""
-"The https://quarkus.io/blog/march-of-ides/[IDE "
-"plugins,role=external,window=_blank] which support \"Wizards "
-"w/code.quarkus.io\""
+"The https://quarkus.io/blog/march-of-ides/[IDE plugins,role=external,"
+"window=_blank] which support \"Wizards w/code.quarkus.io\""
 msgstr ""
+"\"Wizards w/code.quarkus.io\" をサポートする https://quarkus.io/blog/march-"
+"of-ides/[IDEプラグイン, role=external, window=_blank]"
 
 #. type: Title ==
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:46
 #, no-wrap
 msgid "A bit of fun in some of our examples"
-msgstr ""
+msgstr "いくつかの例の中で、ちょっとした楽しみ"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:49
 msgid ""
-"My favorite one is the new Qute example with a subatomic-particles generator "
-":)"
+"My favorite one is the new Qute example with a subatomic-particles "
+"generator :)"
 msgstr ""
+"私のお気に入りは、素粒子ジェネレーターを備えた新しいQuteのサンプルです :)"
 
 #. type: Target for macro image
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:50
 #, no-wrap
 msgid "/assets/images/posts/codestarts/qute-and-quarks.png"
-msgstr ""
+msgstr "/assets/images/posts/codestarts/qute-and-quarks.png"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:53
 msgid ""
-"https://code.quarkus.io/?g=its.subatomic&a=subatomic-particles-generator&v=1.0.0-SNAPSHOT&b=MAVEN&s=xTN&cn=code.quarkus.io[Here "
-"on code.quarkus.io,role=external,window=_blank]"
+"https://code.quarkus.io/?g=its.subatomic&a=subatomic-particles-"
+"generator&v=1.0.0-SNAPSHOT&b=MAVEN&s=xTN&cn=code.quarkus.io[Here on code."
+"quarkus.io,role=external,window=_blank]"
 msgstr ""
+"https://code.quarkus.io/?g=its.subatomic&amp;a=subatomic-particles-"
+"generator&amp;v=1.0.0-SNAPSHOT&amp;b=MAVEN&amp;s=xTN&amp;cn=code.quarkus."
+"io[code.quarkus.ioでは、以下のようになっています。, role=external, "
+"window=_blank]"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:54
 msgid "With the CLI:"
-msgstr ""
+msgstr "With the CLI:"
 
 #. type: delimited block -
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:58
@@ -188,7 +225,7 @@ msgstr ""
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:60
 #, no-wrap
 msgid "We need more Extension codestarts!"
-msgstr ""
+msgstr "もっとエクステンションのcodestartsが必要です！"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:63
@@ -197,22 +234,34 @@ msgid ""
 "for extensions. So whether you are an extension owner, or you are keen to "
 "create an example for an extension you like, contributions are very welcome!"
 msgstr ""
+"コードスタートは、エクステンションのための新しいサンプルを簡単かつ迅速に提供"
+"できるように設計されています。ですから、あなたがエクステンションの所有者の場"
+"合でも、あなたが好きなエクステンションの例を作りたい場合でも、貢献は大歓迎で"
+"す!"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:66
 msgid ""
-"We provide "
-"https://github.com/quarkusio/quarkus/blob/master/independent-projects/tools/codestarts/README.adoc[doc "
-"and tooling,role=external,window=_blank] for it, you may also "
-"https://quarkusio.zulipchat.com/#narrow/stream/187038-dev/topic/Codestarts.2E.2E.2E[come "
-"and ping me (@ia3andy) on Zulip,role=external,window=_blank] for more info."
+"We provide https://github.com/quarkusio/quarkus/blob/master/independent-"
+"projects/tools/codestarts/README.adoc[doc and tooling,role=external,"
+"window=_blank] for it, you may also https://quarkusio.zulipchat.com/#narrow/"
+"stream/187038-dev/topic/Codestarts.2E.2E.2E[come and ping me (@ia3andy) on "
+"Zulip,role=external,window=_blank] for more info."
 msgstr ""
+"私たちはそれのための https://github.com/quarkusio/quarkus/blob/master/"
+"independent-projects/tools/codestarts/README.adoc[ドキュメントとツール, "
+"role=external, window=_blank]を提供しています。 https://quarkusio.zulipchat."
+"com/#narrow/stream/187038-dev/topic/Codestarts.2E.2E.2E[チャットに来て、私"
+"(@ia3andy)にpingを打って, role=external, window=_blank] 詳細について聞くこと"
+"もできます。"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-07-extension-codestarts-a-new-way-to-learn-and-discover-quarkus.adoc:68
 msgid ""
-"For now, we focus on the "
-"https://github.com/quarkusio/quarkus/blob/master/extensions[core "
-"extensions,role=external,window=_blank], but we will make it available to "
-"the broader ecosystem soon."
+"For now, we focus on the https://github.com/quarkusio/quarkus/blob/master/"
+"extensions[core extensions,role=external,window=_blank], but we will make it "
+"available to the broader ecosystem soon."
 msgstr ""
+"今のところは https://github.com/quarkusio/quarkus/blob/master/extensions[コア"
+"なエクステンション, role=external, window=_blank]に焦点を当てていますが、近い"
+"うちにより広いエコシステムで利用できるようにする予定です。"
