--- a/i18n/po/ja_JP/_posts/2020-11-25-stylish-api.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-11-25-stylish-api.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:09+0900\n"
-"PO-Revision-Date: 2021-01-01 21:51+0900\n"
+"PO-Revision-Date: 2021-01-01 22:11+0900\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +38,7 @@ msgstr ""
 "title: スタイリッシュＡＰＩ\n"
 "date: 2020-11-25\n"
 "tags: extension openapi swagger-ui\n"
-"synopsis: スワッガーのUI設定とカスタムスタイリング\n"
+"synopsis: SwaggerのUI設定とカスタムスタイリング\n"
 "author: phillipkruger\n"
 "---\n"
 
