--- a/i18n/po/ja_JP/_guides/tooling.adoc.po
+++ b/i18n/po/ja_JP/_guides/tooling.adoc.po
@@ -2,19 +2,19 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:10+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-05 21:56+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_guides/tooling.adoc:6
 #, no-wrap
 msgid "Quarkus - Using our Tooling"
-msgstr ""
+msgstr "Quarkus - ツールを使用する"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:12
@@ -32,52 +32,55 @@ msgid ""
 "way down to deploying a Kubernetes application.  In this guide, we will "
 "explore:"
 msgstr ""
+"Quarkusには、開発者がライブリロードからKubernetesアプリケーションのデプロイ"
+"までを可能にするツールチェーンが付属しています。このガイドでは、以下を探検し"
+"ていきます："
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:14
 msgid "how to use link:maven-tooling[Maven] as a build tool"
-msgstr ""
+msgstr "ビルドツールとしての link:maven-tooling[Maven]の使い方"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:15
 msgid "how to use link:gradle-tooling[Gradle] as a build tool"
-msgstr ""
+msgstr "ビルドツールとしての link:gradle-tooling[Gradle]の使い方"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:16
 msgid "how to use the native CLI for your toolchain (coming soon)"
-msgstr ""
+msgstr "ネイティブCLIのツールチェーンとしての使い方 (近日公開予定)"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:17
 msgid "how to create and scaffold a new project"
-msgstr ""
+msgstr "新規プロジェクトの作り方とスキャフォールド（足場）の作り方"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:18
 msgid "how to deal with extensions"
-msgstr ""
+msgstr "エクステンションの扱い方"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:19
 msgid "how to enable live reload"
-msgstr ""
+msgstr "ライブリロードを有効にする方法"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:20
 msgid "how to develop your application in your IDE"
-msgstr ""
+msgstr "IDEでアプリケーションを開発する方法"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:21
 msgid "how to compile your application natively"
-msgstr ""
+msgstr "アプリケーションをネイティブにコンパイルする方法"
 
 #. type: Title ==
 #: upstream/_guides/tooling.adoc:23
 #, no-wrap
 msgid "Choosing your build tool"
-msgstr ""
+msgstr "ビルドツールの選択"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:28
@@ -86,14 +89,17 @@ msgid ""
 "can use Maven or Gradle as build tool.  And we offer a native CLI that is "
 "convenient to use (coming soon)."
 msgstr ""
+"Quarkusには、すべての開発段階で役立つツールチェーンが付属しています。ビルド"
+"ツールとしてMavenやGradleを使うことができます。また、使い勝手の良いネイティ"
+"ブCLIも提供しています（近日公開予定）。"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:30
 msgid "link:maven-tooling[Maven]"
-msgstr ""
+msgstr "link:maven-tooling[Maven]"
 
 #. * link:cli-tooling[CLI]
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:31
 msgid "link:gradle-tooling[Gradle]"
-msgstr ""
+msgstr "link:gradle-tooling[Gradle]"
