Translate cdi.adoc

--- a/i18n/po/ja_JP/_data/guides.yaml.po
+++ b/i18n/po/ja_JP/_data/guides.yaml.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-01-07 00:07+0900\n"
-"PO-Revision-Date: 2021-01-07 17:37+0900\n"
+"PO-Revision-Date: 2021-01-07 21:41+0900\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -176,7 +176,7 @@ msgstr "/guides/lifecycle"
 #: >categories>>guides>
 #, no-wrap
 msgid "Quarkus DI solution is based on the [Contexts and Dependency Injection for Java 2.0](https://docs.jboss.org/cdi/spec/2.0/cdi-spec) specification. This guide explains the basics of CDI."
-msgstr "QuarkusのDIソリューションは、 [Contexts and Dependency Injection for Java 2.0 https://docs.jboss.org/cdi/spec/2.0/cdi-spec )仕様に基づいています。このガイドでは、CDIの基本を説明します。"
+msgstr "QuarkusのDIソリューションは、 [Contexts and Dependency Injection for Java 2.0](https://docs.jboss.org/cdi/spec/2.0/cdi-spec )仕様に基づいています。このガイドでは、CDIの基本を説明します。"
 
 #. type: Hash Value - Key: keywords
 #: >categories>>guides>
