Translate security.adoc.po

--- a/i18n/po/ja_JP/_guides/security-jpa.adoc.po
+++ b/i18n/po/ja_JP/_guides/security-jpa.adoc.po
@@ -2,19 +2,19 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:10+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-09 12:59+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_guides/security-jpa.adoc:6
 #, no-wrap
 msgid "Quarkus - Using Security with JPA"
-msgstr ""
+msgstr "Quarkus - JPAと共にSecurityを使う"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:12
@@ -32,43 +32,46 @@ msgid ""
 "store your user identities with link:hibernate-orm[Hibernate ORM] or link:"
 "hibernate-orm-panache[Hibernate ORM with Panache]."
 msgstr ""
+"このガイドでは、Quarkusアプリケーションがデータベースを使用し、 link:"
+"hibernate-orm[Hibernate ORM]または link:hibernate-orm-panache[Hibernate ORM "
+"with Panache]を使用してユーザーIDを保存する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:14
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:17
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下のものが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:19
 msgid "less than 15 minutes"
-msgstr ""
+msgstr "15分以内"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:20
 msgid "an IDE"
-msgstr ""
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:21
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:22
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:23
 #, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "Architecture"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:26
@@ -76,21 +79,23 @@ msgid ""
 "In this example, we build a very simple microservice which offers three "
 "endpoints:"
 msgstr ""
+"この例では、3つのエンドポイントを提供する非常にシンプルなマイクロサービスを構"
+"築します："
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:28
 msgid "`/api/public`"
-msgstr ""
+msgstr "`/api/public`"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:29
 msgid "`/api/users/me`"
-msgstr ""
+msgstr "`/api/users/me`"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:30
 msgid "`/api/admin`"
-msgstr ""
+msgstr "`/api/admin`"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:34
@@ -103,12 +108,19 @@ msgid ""
 "Control) where only users granted with the `user` role can access. As a "
 "response, it returns a JSON document with details about the user."
 msgstr ""
+"`/api/public` エンドポイントは匿名でアクセスできます。 `/api/admin` エンドポ"
+"イントは RBAC (Role-Based Access Control) で保護されており、 `admin` の役割を"
+"与えられたユーザーのみがアクセスできます。このエンドポイントでは、 "
+"`@RolesAllowed` アノテーションを使用して、アクセス制約を宣言的に強制します。 "
+"`/api/users/me` エンドポイントも RBAC (Role-Based Access Control) で保護され"
+"ており、 `user` ロールで付与されたユーザーのみがアクセスできます。レスポンス"
+"として、ユーザーに関する詳細を含むJSONドキュメントを返します。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:35
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:39
@@ -117,6 +129,8 @@ msgid ""
 "create the application step by step.  However, you can go right to the "
 "completed example."
 msgstr ""
+"次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めし"
+"ます。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:41
@@ -124,6 +138,8 @@ msgid ""
 "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download "
 "an {quickstarts-archive-url}[archive]."
 msgstr ""
+"Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、または "
+"{quickstarts-archive-url}[archive] をダウンロードしてください。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:43
@@ -131,12 +147,14 @@ msgid ""
 "The solution is located in the `security-jpa-quickstart` {quickstarts-tree-"
 "url}/security-jpa-quickstart[directory]."
 msgstr ""
+"ソリューションは `security-jpa-quickstart` {quickstarts-tree-url}/security-"
+"jpa-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:44
 #, no-wrap
 msgid "Creating the Maven Project"
-msgstr ""
+msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:47
@@ -144,6 +162,8 @@ msgid ""
 "First, we need a new project. Create a new project with the following "
 "command:"
 msgstr ""
+"まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成し"
+"ます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:56
@@ -163,6 +183,8 @@ msgid ""
 "Don't forget to add the database connector library of choice. Here we are "
 "using PostgreSQL as identity store."
 msgstr ""
+"選択したデータベースコネクタライブラリを追加することを忘れないでください。こ"
+"こでは、PostgreSQLをIDストアとして使用しています。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:65
@@ -170,6 +192,8 @@ msgid ""
 "This command generates a Maven project, importing the `security-jpa` "
 "extension which allows you to map your security source to JPA entities."
 msgstr ""
+"このコマンドは、セキュリティ ソースを JPA エンティティにマップできる "
+"`security-jpa` 拡張機能をインポートして、Maven プロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:68
@@ -178,6 +202,9 @@ msgid ""
 "`security-jpa` extension to your project by running the following command in "
 "your project base directory:"
 msgstr ""
+"すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレク"
+"トリで以下のコマンドを実行することで、プロジェクトに `security-jpa` 拡張機能"
+"を追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:72
@@ -188,7 +215,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:75
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml` に以下が追加されます："
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:82
@@ -204,7 +231,7 @@ msgstr ""
 #: upstream/_guides/security-jpa.adoc:84
 #, no-wrap
 msgid "Writing the application"
-msgstr ""
+msgstr "アプリケーションの記述"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:87
@@ -212,6 +239,8 @@ msgid ""
 "Let's start by implementing the `/api/public` endpoint. As you can see from "
 "the source code below, it is just a regular JAX-RS resource:"
 msgstr ""
+"`/api/public` エンドポイントの実装から始めましょう。以下のソースコードから分"
+"かるように、通常のJAX-RSリソースです："
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:91 upstream/_guides/security-jpa.adoc:116
@@ -261,6 +290,9 @@ msgid ""
 "difference here is that we are using a `@RolesAllowed` annotation to make "
 "sure that only users granted with the `admin` role can access the endpoint:"
 msgstr ""
+"`/api/admin` エンドポイントのソースコードも非常にシンプルです。ここでの主な違"
+"いは、 `admin` ロールで付与されたユーザーだけがエンドポイントにアクセスできる"
+"ように `@RolesAllowed` アノテーションを使用していることです："
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:122
@@ -303,6 +335,10 @@ msgid ""
 "Principal and we return the user's name. This information is loaded from the "
 "database."
 msgstr ""
+"最後に、 `/api/users/me` エンドポイントを考えてみましょう。下のソースコードを"
+"見ればわかるように、 `user` の役割を持つユーザのみを信頼しています。現在認証"
+"されているプリンシパルへのアクセスを得るために `SecurityContext` を使用してお"
+"り、ユーザーの名前を返します。この情報はデータベースから読み込まれます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:148
@@ -341,7 +377,7 @@ msgstr ""
 #: upstream/_guides/security-jpa.adoc:161
 #, no-wrap
 msgid "Defining our user entity"
-msgstr ""
+msgstr "ユーザーエンティティの定義"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:164
@@ -349,6 +385,8 @@ msgid ""
 "We can now describe how our security information is stored in our model by "
 "adding a few annotations to our `User` entity:"
 msgstr ""
+"これで、 `User` エンティティにいくつかのアノテーションを追加することで、セ"
+"キュリティ情報がモデルにどのように保存されているかを説明することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:171
@@ -412,6 +450,8 @@ msgid ""
 "The `security-jpa` extension is only initialized if there is a single entity "
 "annotated with `@UserDefinition`."
 msgstr ""
+"`security-jpa` 拡張子は、 `@UserDefinition` でアノテーションされた単一のエン"
+"ティティがある場合にのみ初期化されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:210
@@ -420,11 +460,14 @@ msgid ""
 "Hibernate ORM entity or a Hibernate ORM with Panache entity as in this "
 "example."
 msgstr ""
+"このアノテーションは、単一のエンティティに存在しなければなりません。この例の"
+"ように、通常のHibernate ORMエンティティまたはHibernate ORM with Panacheエン"
+"ティティにすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:211
 msgid "This indicates the field used for the user name."
-msgstr ""
+msgstr "これは、ユーザー名に使用されるフィールドを示します。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:212
@@ -433,6 +476,9 @@ msgid ""
 "bcrypt hashed passwords, but you can also configure it for clear text "
 "passwords."
 msgstr ""
+"これは、パスワードに使用するフィールドを示します。これはデフォルトでは "
+"bcrypt ハッシュ化されたパスワードを使用するように設定されていますが、クリアテ"
+"キストパスワード用に設定することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:213
@@ -440,6 +486,8 @@ msgid ""
 "This indicates the comma-separated list of roles added to the target "
 "Principal representation attributes."
 msgstr ""
+"これは、対象のプリンシパル表現属性に追加されたロールのコンマ区切りリストを示"
+"します。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:214
@@ -447,12 +495,14 @@ msgid ""
 "This method allows us to add users while hashing the password with the "
 "proper bcrypt hash."
 msgstr ""
+"この方法では、パスワードを適切なbcryptハッシュでハッシュしながらユーザーを追"
+"加することができます。"
 
 #. type: Title ===
 #: upstream/_guides/security-jpa.adoc:215
 #, no-wrap
 msgid "Configuring the Application"
-msgstr ""
+msgstr "アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:218
@@ -460,6 +510,8 @@ msgid ""
 "The `security-jpa` extension requires at least one datasource to access to "
 "your database."
 msgstr ""
+"`security-jpa` 拡張モジュールは、データベースにアクセスするために少なくとも一"
+"つのデータソースが必要です。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:225
@@ -485,6 +537,9 @@ msgid ""
 "production) and we initialize the database with users and roles in the "
 "`Startup` class:"
 msgstr ""
+"私たちのコンテキストでは、IDストアとしてPostgreSQLを使用しています。データ"
+"ベーススキーマはHibernate ORMによって起動時に自動的に作成され（本番ではこれを"
+"変更します）、 `Startup` クラスのユーザとロールでデータベースを初期化します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:239
@@ -524,12 +579,15 @@ msgid ""
 "clear-text passwords in production environments ;-).  As a result, the "
 "`security-jpa` defaults to using bcrypt-hashed passwords."
 msgstr ""
+"おそらく役に立たないと思いますが、本番環境ではクリアテキストのパスワードを保"
+"存してはいけないことをご注意ください。)その結果、 `security-jpa` はデフォルト"
+"で bcrypt でハッシュ化されたパスワードを使用するようになりました。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:261
 #, no-wrap
 msgid "Testing the Application"
-msgstr ""
+msgstr "アプリケーションのテスト"
 
 #. type: delimited block =
 #: upstream/_guides/security-jpa.adoc:266
@@ -538,6 +596,9 @@ msgid ""
 "enable it by setting `quarkus.http.auth.basic=true` in the `application."
 "properties` file."
 msgstr ""
+"以下のテストでは、基本的な認証メカニズムを使用していますが、 `application."
+"properties` ファイルに `quarkus.http.auth.basic=true` を設定することで有効に"
+"することができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:270
@@ -546,6 +607,9 @@ msgid ""
 "database.  The very first thing to check is to ensure the anonymous access "
 "works."
 msgstr ""
+"アプリケーションが保護され、アイデンティティがデータベースから提供されるよう"
+"になりました。非常に最初に確認しなければならないことは、匿名アクセスが機能す"
+"ることを確認することです。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:277
@@ -566,7 +630,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:282
 msgid "Now, let's try a to hit a protected resource anonymously."
-msgstr ""
+msgstr "では、匿名で保護されたリソースを攻撃してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:289
@@ -587,7 +651,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:294
 msgid "So far so good, now let's try with an allowed user."
-msgstr ""
+msgstr "ここまでは順調ですが、今度は許可されたユーザーで試してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:301
@@ -612,6 +676,9 @@ msgid ""
 "user and loaded their roles.  The `admin` user is authorized to access to "
 "the protected resources."
 msgstr ""
+"`admin:admin` 資格情報を提供することで、拡張機能はユーザーを認証し、そのロー"
+"ルをロードしました。 `admin` ユーザーは、保護されたリソースへのアクセスを許可"
+"されています。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:308
@@ -619,6 +686,8 @@ msgid ""
 "The user `admin` should be forbidden to access a resource protected with "
 "`@RolesAllowed(\"user\")` because it doesn't have this role."
 msgstr ""
+"ユーザー `admin` は、この役割を持っていないので、 `@RolesAllowed(\"user\")` "
+"で保護されたリソースへのアクセスを禁止する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:315
@@ -642,6 +711,8 @@ msgid ""
 "Finally, using the user `user` works and the security context contains the "
 "principal details (username for instance)."
 msgstr ""
+"最後に、ユーザ `user` を使用すると動作し、セキュリティコンテキストには主要な"
+"詳細（例えばユーザ名）が含まれています。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:327
@@ -663,17 +734,20 @@ msgstr ""
 #: upstream/_guides/security-jpa.adoc:331
 #, no-wrap
 msgid "Supported model types"
-msgstr ""
+msgstr "サポートされているモデルの種類"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:334
 msgid "The `@UserDefinition` class must be a JPA entity (with Panache or not)."
 msgstr ""
+"`@UserDefinition` クラスは JPA エンティティである必要があります（Panache を使"
+"用しているかどうかは問いません）。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:335
 msgid "The `@Username` and `@Password` field types must be of type `String`."
 msgstr ""
+"`@Username` と `@Password` フィールドの型は `String` でなければなりません。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:336
@@ -682,6 +756,10 @@ msgid ""
 "or alternately a `Collection<X>` where `X` is an entity class with one "
 "`String` field annotated with the `@RolesValue` annotation."
 msgstr ""
+"`@Roles` フィールドは `String` か `Collection&amp;lt;String&amp;gt;` のいずれ"
+"かのタイプであるか、または `Collection&amp;lt;X&amp;gt;` である必要がありま"
+"す。 `X` はエンティティクラスで、 `@RolesValue` アノテーションが付与された "
+"`String` フィールドが 1 つあります。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:337
@@ -689,17 +767,19 @@ msgid ""
 "Each `String` role element type will be parsed as a comma-separated list of "
 "roles."
 msgstr ""
+"各 `String` role 要素の型は、カンマで区切られたロールのリストとして解析されま"
+"す。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:338
 #, no-wrap
 msgid "Storing roles in another entity"
-msgstr ""
+msgstr "別のエンティティにロールを格納する"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:341
 msgid "You can also store roles in another entity:"
-msgstr ""
+msgstr "また、別のエンティティにロールを格納することもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:350
@@ -760,7 +840,7 @@ msgstr ""
 #: upstream/_guides/security-jpa.adoc:370
 #, no-wrap
 msgid "Password storage and hashing"
-msgstr ""
+msgstr "パスワードの保存とハッシュ化"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:374
@@ -769,6 +849,9 @@ msgid ""
 "wikipedia.org/wiki/Bcrypt[bcrypt] under the https://en.wikipedia.org/wiki/"
 "Crypt_(C)[Modular Crypt Format] (MCF)."
 msgstr ""
+"デフォルトでは、パスワードは MCF ( link:https://en.wikipedia.org/wiki/"
+"Crypt_©[Modular Crypt Format]) の下で link:https://en.wikipedia.org/wiki/"
+"Bcrypt[bcrypt]でハッシュ化されて保存されると考えています。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:378
@@ -778,6 +861,10 @@ msgid ""
 "creating a random salt and hashing in 10 iterations (though you can specify "
 "the iterations and salt too)."
 msgstr ""
+"このようなハッシュ化されたパスワードを作成する必要がある場合は、便利な "
+"`String BcryptUtil.bcryptHash(String password)` 関数を用意しています。デフォ"
+"ルトでは、ランダムなソルトを作成して 10 回の繰り返しでハッシュ化します (繰り"
+"返しとソルトも指定できます)。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:381
@@ -786,6 +873,8 @@ msgid ""
 "the iterations count or the salt because they're all stored in the hashed "
 "value."
 msgstr ""
+"MCF を使うと、ハッシュアルゴリズムや反復回数、 ソルトを格納するための専用のカ"
+"ラムは必要ありません。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:384
@@ -794,14 +883,16 @@ msgid ""
 "`@Password(PasswordType.CLEAR)` but we strongly recommend against it in "
 "production."
 msgstr ""
+"警告: `@Password(PasswordType.CLEAR)` を使ってパスワードをクリアテキストで保"
+"存することもできますが、本番では絶対にしないことを強くお勧めします。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:385
 #, no-wrap
 msgid "References"
-msgstr ""
+msgstr "参照"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:387
 msgid "link:security[Quarkus Security]"
-msgstr ""
+msgstr "link:security[Quarkusのセキュリティ]"
